--- a/templates/add_candidate.html
+++ b/templates/add_candidate.html
@@ -125,7 +125,7 @@
         <input type="file" name="image" required><br>
     
     
-        <button type="submit">Add Candidate</button> <!-- Changed to button tag with styling -->
+        <button type="submit">Add Candidate</button> 
     </form>
 
     <div class="button-container">
